# nope

./: .gitignore  Cargo.toml  README.md
samples/: array.nope  big-expr-5k.nope  csv.nope  fizzbuzz.nope  fizzbuzz2.nope  gen_expr.py  invalid-key.nope  json.nope  oneline.nope  quicksort-altsyntax.nope  quicksort-pretty.nope  quicksort.nope  reverse_string.nope  toml.nope  unfinished-array.nope  unfinished-string.nope  variable.nope  weird.nope  xml.nope
samples/drafts/: blog.nope  data.nope  quicksort-pretty.nope  quicksort.nope
src/: chunk.rs  config.rs  consts.rs  gc.rs  interesting_docs.md  main.rs  objects.rs  parser.rs  penv.rs  repl.rs  stdlib.rs  tokenizer.rs  units.rs  vim.rs  vm.rs
src/intrinsics/: repeat.asm-nope  while.asm-nope
src/syntax/: nope.vim
text_editor_plugins/vim/: nope.vim
