[package]
name = "nope-lang"
version = "0.1.2"
edition = "2021"
description = "The nope programming language"
authors = ["Frédéric van der Essen"]
license = "MIT OR Apache-2.0"
keywords = ["language", "script", "dnd", "math"]
categories = ["compilers"]
homepage = "https://github.com/fvdsn/nope"
repository = "https://github.com/fvdsn/nope"
readme = "README.md"

[[bin]]
path = "src/main.rs"
name = "nope"
test = true
bench = false

[dependencies]
rand = "0.8.0"
clap = { version = "3.1.6", features = ["derive"] }
colored = "2.0.4"
rustyline = "12.0.0"
rustyline-derive = "0.9.0"
